@@ -59,3 +59,7 @@ test_that("zero length input gives single number", {
   expect_that(id(character()), is_equivalent_to(1))
 })
 
+test_that("zero column data frame gives seq_len(nrow)", {
+  df <- as.data.frame(matrix(nrow = 10, ncol = 0))
+  expect_equivalent(id(df), 1:10)
+})
