@@ -1,6 +1,10 @@
 Version 1.7.1.99
 ------------------------------------------------------------------------------
 
+* `rbind.fill` now works consistently with 0 column data frames
+
+* `join` works correctly when no common rows (Fixes #74)
+
 * `split_indices`, which powers much internal splitting code (like `vaggregate`, `join` and `d*ply`) is about 2x faster.  It was already incredible fast ~0.2s for 1,000,000 obs, so this won't have much impact on overall performance
 
 * `a*ply`: 25x speedup when indexing array objects, 3x speedup when indexing data frames.  This should substantially reduce the overhead of using `a*ply`
